@@ -1,5 +1,12 @@
 2008-10-22	Brian Tarricone <bjt23@cornell.edu>
 
+	* settings/session-editor.c: Validate the value for the
+	  restart style hint to avoid a possible crash.  Sort the
+	  client list first by priority, then by program name.  Allow
+	  the user to change the priority.
+
+2008-10-22	Brian Tarricone <bjt23@cornell.edu>
+
 	* configure.in.in: Update bug report address to http://bugs.xfce.org/.
 
 2008-10-22	Brian Tarricone <bjt23@cornell.edu>
